--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>adssasasasasasasasasasasas
+<html>
 <head>
 	<meta charset="UTF-8">
     <link type="text/css" rel="stylesheet" href="index.css">
@@ -10,5 +10,5 @@
 		<img src="index.png">
 	<br>
     <div>請按我!</div>
-</body>asdasasasasasasasasasasasasasas
+</body>
 </html>
